# uart2wifi_esp32

./: .gitignore  .gitmodules  CHANGE LOG.md  CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.esp32c3  sdkconfig.esp32s3
components/app_event_loop/: CMakeLists.txt  app_event_loop.c
components/app_event_loop/include/: app_event_loop.h
components/bus_manager/: CMakeLists.txt  bus_manager.c
components/bus_manager/include/: bus_manager.h
components/ext_gpio/: CMakeLists.txt  ext_gpio.c  ext_gpio.h  ext_gpio_drive.c  ext_gpio_event.c  ext_gpio_type.h
components/ext_gpio/include/: ext_gpio.h  ext_gpio_drive.h  ext_gpio_event.h  ext_gpio_event_type.h  ext_gpio_type.h
components/lcd_display/: CMakeLists.txt  lcd_display.c  lcd_driver.c
components/lcd_display/include/: lcd_display.h  lcd_driver.h  lcd_img.h  lcd_model_type.h  lcd_models.h
components/lcd_font/: CMakeLists.txt  lcd_font_type.h  lcd_fonts.c  lcd_fonts.h
components/lcd_font/fonts/: font_10x18.c  font_8x16.c  font_8x8.c  font_acorn_8x8.c  font_console_number_32x48.c  font_sun_12x22.c  font_ter_16x32.c  lcd_font_acorn_8x8.h
components/misc_utils/: CMakeLists.txt  README.md  hex_dump.c
components/misc_utils/include/: hex_dump.h
components/tcp_server/: CMakeLists.txt  README.md  tcp_server.c
components/tcp_server/include/: tcp_server.h
components/uptime/: uptime.h
components/wifi_station/: CMakeLists.txt  README.md  USAGE_SUMMARY.md  test_build.c  wifi_station.c  wifi_station_example.c
components/wifi_station/include/: wifi_station.h  wifi_station_example.h
docs/: COMMAND_MENU_IMPLEMENTATION_SUMMARY.md  COMMAND_MENU_USAGE.md  DISPLAY_DESIGN.md  README_CLI_WIFI.md  WiFi_Station_Component_Summary.md  user_guide.md
main/: CMakeLists.txt  app_main.c  app_main_test_wifi_station.c  board.c  cli_impl.c  cli_menu.c  cli_menu.h  display.c  img_icons.c  img_icons.h  serial2ip_esp32.c  uart_bridge.c
main/include/: board.h  cli_impl.h  cli_menu.h  display.h  export_ids.h  img_icons.h  uart_bridge.h  version.h
test/: app_main_test_wifi_cli.c  tcp_echo.py  test_serial.py  test_tcp.py
